--- a/index.html
+++ b/index.html
@@ -206,9 +206,9 @@
 
             <li class="comand__list">
               <img
-  srcset="./images/imgdesktop1.jpg 1200w, ./images/imgtablet1.jpg 768w, ./images/imgmob1.jpg 480w"
-  src="./images/imgdesktop1.jpg "
-  alt="Игорь Демьяненко"
+  srcset="./images/imgdesktop2.jpg 1200w, ./images/imgtablet2.jpg 768w, ./images/imgmob2.jpg 480w"
+  src="./images/imgdesktop2.jpg "
+  alt="Ольга Репина"
 />
               <!-- <img src="./images/img2.jpg" alt="фото5" width="270" /> -->
               <div class="comand__person">
@@ -249,9 +249,9 @@
 
             <li class="comand__list">
               <img
-  srcset="./images/imgdesktop1.jpg 1200w, ./images/imgtablet1.jpg 768w, ./images/imgmob1.jpg 480w"
-  src="./images/imgdesktop1.jpg "
-  alt="Игорь Демьяненко"
+  srcset="./images/imgdesktop3.jpg 1200w, ./images/imgtablet3.jpg 768w, ./images/imgmob3.jpg 480w"
+  src="./images/imgdesktop3.jpg "
+  alt="Николай Тарасов"
 />
               <!-- <img src="./images/img3.jpg" alt="фото6" width="270" /> -->
               <div class="comand__person">
@@ -291,9 +291,9 @@
             </li>
             <li class="comand__list">
               <img
-  srcset="./images/imgdesktop1.jpg 1200w, ./images/imgtablet1.jpg 768w, ./images/imgmob1.jpg 480w"
-  src="./images/imgdesktop1.jpg "
-  alt="Игорь Демьяненко"
+  srcset="./images/imgdesktop4.jpg 1200w, ./images/imgtablet4.jpg 768w, ./images/imgmob4.jpg 480w"
+  src="./images/imgdesktop4.jpg "
+  alt="Михаил Ермаков"
 />
               <!-- <img src="./images/img4.jpg" alt="фото7" width="270" /> -->
               <div class="comand__person">
@@ -506,6 +506,8 @@
             
         </div> 
       </div>
+
+      
     <script src="./js/modal.js"></script>
   </body>
 </html>
