--- a/portfolio.html
+++ b/portfolio.html
@@ -75,7 +75,7 @@
                 <div class="cards__overlay">
                   <img
                     class="cards__img"
-                    src="./images/img5.jpg"
+                    src="./images/cardmob1.jpg"
                     alt="фото5"
                     width="370"
                   />
@@ -97,7 +97,7 @@
                 <div class="cards__overlay">
                   <img
                     class="cards__img"
-                    src="./images/img6.jpg"
+                    src="./images/cardmob2.jpg"
                     alt="фото6"
                     width="370"
                   />
@@ -119,7 +119,7 @@
                 <div class="cards__overlay">
                   <img
                     class="cards__img"
-                    src="./images/img7.jpg"
+                    src="./images/cardmob3.jpg"
                     alt="фото6"
                     width="370"
                   />
@@ -141,7 +141,7 @@
                 <div class="cards__overlay">
                   <img
                     class="cards__img"
-                    src="./images/img8.jpg"
+                    src="./images/cardmob4.jpg"
                     alt="фото8"
                     width="370"
                   />
@@ -163,7 +163,7 @@
                 <div class="cards__overlay">
                   <img
                     class="cards__img"
-                    src="./images/img9.jpg"
+                    src="./images/cardmob5.jpg"
                     alt="фото9"
                     width="370"
                   />
@@ -185,7 +185,7 @@
                 <div class="cards__overlay">
                   <img
                     class="cards__img"
-                    src="./images/img10.jpg"
+                    src="./images/cardmob6.jpg"
                     alt="фото10"
                     width="370"
                   />
@@ -207,7 +207,7 @@
                 <div class="cards__overlay">
                   <img
                     class="cards__img"
-                    src="./images/img11.jpg"
+                    src="./images/cardmob7.jpg"
                     alt="фото11"
                     width="370"
                   />
@@ -229,7 +229,7 @@
                 <div class="cards__overlay">
                   <img
                     class="cards__img"
-                    src="./images/img12.jpg"
+                    src="./images/cardmob8.jpg"
                     alt="фото12"
                     width="370"
                   />
@@ -251,7 +251,7 @@
                 <div class="cards__overlay">
                   <img
                     class="cards__img"
-                    src="./images/img13.jpg"
+                    src="./images/cardmob9.jpg"
                     alt="фото13"
                     width="370"
                   />
