--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
             +38 096 111 11 11</a>
         </li>
       </ul>
-      <!-- <button class="burger" type="button" burger-open>
+      <button class="burger" type="button" burger-open>
         <svg class="burger__icon" width="40" height="40">
-          <use href="./images/symbol-defs.svg#smartphone"></use>
+          <use href="./images/symbol-defs.svg#burger"></use>
         </svg>
-      </button> -->
+      </button>
     </div>
   </header>
 
@@ -489,7 +489,7 @@
   </div>
 
   <!-- burger-menu -->
-  <!-- <div class="mob-menu burger-is-hidden" burger>
+  <div class="mob-menu burger-is-hidden" burger> 
     <div class="mob-menu__block">
       <button class="mob-menu__button" type="button" burger-close>
         <svg width="40" height="40">
@@ -529,7 +529,7 @@
         </ul>
       </div>
     </div>
-  </div> -->
+  </div>
 
   <script src="./js/modal.js"></script>
 </body>
